- Fixed an overflow bug and a bug where selected a mode type a new line. - Non-functional change to the editor.

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -199,6 +199,9 @@ body.home   #workspace { display: none;  }
                     font-family: verdana;
                     color: #333;
                     font-size: 16px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
                 }
                 
                
